--- a/client-booking/src/app/app.component.html
+++ b/client-booking/src/app/app.component.html
@@ -2,7 +2,7 @@
 <main class="main">
   <div class="content">
 
-      <h1> {{ title }}</h1>
+      <h1> {{ printmessage() }}</h1>
 
   </div>
 </main>
